[gd_scene load_steps=2 format=3 uid="uid://de1d3yiee0ar8"]

[ext_resource type="Script" uid="uid://b4aq07dnnmhuo" path="res://classes/login_form/login_form.gd" id="1_h5oh0"]

[node name="LoginForm" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_h5oh0")

[node name="UsernameField" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_bottom = NodePath("../PasswordField")
placeholder_text = "Username"

[node name="PasswordField" type="LineEdit" parent="."]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../UsernameField")
focus_neighbor_bottom = NodePath("../HBoxContainer/LoginButton")
placeholder_text = "Password"
virtual_keyboard_type = 6
secret = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2
alignment = 1

[node name="LoginButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Login"

[node name="HiscoresButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
focus_neighbor_top = NodePath("../../PasswordField")
text = "Hiscores"
